# pokedex-db-migrate

./: LICENSE  README.md  pyproject.toml  query.sql
src/: main.py
src/mongo_db/: pokedex_mongo_client.py
src/mongo_db/models/: ability.py  base_stats.py  evolution.py  evolution_chain.py  measurement.py  pokemon.py
src/psql/: pokedex_psql_client.py
src/psql/models/: ability.py  base_stats.py  evolution.py  evolution_chain.py  measurement.py  pokemon.py
src/services/: pokemon_migration_service.py
