[project]
name = "pokedex-db-migrate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2>=2.9.10",
    "pymongo>=4.13.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
]

[tool.mypy]
ignore_missing_imports = true
